syntax = "proto3";

import "server.proto";

option java_multiple_files = true;
option java_package = "org.cloudhub.server.rpc.server";
option java_outer_classname = "ServerStatusProtos";

message ServerStatusRequest {
}

message ServerStatusResponse {
  SerializedServerStatus status = 1;
}

message ServerStatusRecordRequest {
  int32 record_num = 1;
}

message ServerStatusRecordResponse {
  repeated SerializedServerStatus statues = 1;
}

message ServerNetworkRecordResponse {
  repeated SerializedNetworkUsageInfo nets = 1;
}

message ServerDiskRecordResponse {
  repeated SerializedDiskUsageInfo disks = 1;
}

service ServerStatusService {
  rpc requestServerStatus (ServerStatusRequest) returns (ServerStatusResponse);

  rpc requestServerRecordStatuses (ServerStatusRecordRequest) returns (ServerStatusRecordResponse);

  rpc requestServerNetworkRecord (ServerStatusRecordRequest) returns (ServerNetworkRecordResponse);

  rpc requestServerDiskRecord (ServerStatusRecordRequest) returns (ServerDiskRecordResponse);
}
